# modmail

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: bot.py  cmds.py  modmail.py
